load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "hello_lib",
    srcs = ["src/current_version.cpp"],
    hdrs = ["include/hello_lib/current_version.h"],
    defines = select({
        "@msvc_toolchains//compiler:clang": ["COMPILER_IS_CLANG"],
        "@msvc_toolchains//compiler:clang-cl": ["COMPILER_IS_CLANG_CL"],
        "@msvc_toolchains//compiler:msvc-cl": ["COMPILER_IS_CL"],
        "//conditions:default": [],
    }),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["//dyn_hello"],
)
